--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ input[type=text]:focus, [type=date]:focus  {
 
 a {
   text-decoration: none;
-  color: white;
+  color: black;
   font-family: 'Fjalla One', sans-serif;
 }
 
